Adapt backend for production deployment with Render and CORS fix

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <!-- IMPORTANT: point to your live backend -->
         <div class="row" style="display:none">
           <label>Upload URL</label>
-          <input id="uploadUrl" type="text" value="https://api.anamorphic-desqueeze.com/upload" />
+         <input id="uploadUrl" type="text" value="https://desqueeze-server-render.onrender.com/upload" />
         </div>
       </section>
     </main>
