--- a/index.html
+++ b/index.html
@@ -3,22 +3,103 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Web Desqueeze Studio — Simple Desqueezer</title>
+  <title>Web Desqueeze Studio — Batch Desqueezer</title>
+
+  <!-- SEO -->
+  <meta name="description" content="Web Desqueeze Studio lets you preview and export de-squeezed anamorphic video and photos — fast, with batch processing in your browser." />
+  <meta name="keywords" content="anamorphic, desqueeze, de-squeeze, batch desqueezer, video editor, aspect ratio, cinema lens, 1.33x, 1.5x, 1.8x, 2.0x" />
+  <link rel="canonical" href="https://anamorphic-desqueeze.com/" />
+  <meta name="robots" content="index,follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Web Desqueeze Studio — Batch Desqueezer" />
+ <meta property="og:description" content="Preview horizontal de-squeeze; App exports to the user's local system Downloads folder with fully corrected MP4/JPG/PNG files and batch export as a ZIP file." />
+  <meta property="og:url" content="https://anamorphic-desqueeze.com/" />
+  <meta property="og:image" content="https://anamorphic-desqueeze.com/og-cover.jpg" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Web Desqueeze Studio — Batch Desqueezer" />
+  <meta name="twitter:description" content="Preview horizontal de-squeeze; export fully corrected MP4/JPG/PNG with batch processing." />
+  <meta name="twitter:image" content="https://anamorphic-desqueeze.com/og-cover.jpg" />
+
+  <!-- GA4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6BFDRLKVZK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-6BFDRLKVZK');
+  </script>
+
   <link rel="stylesheet" href="./style.css" />
+
+  <!-- Minimal, additive styling for header/footer & small UI polish -->
+  <style>
+    :root {
+      --bg: #000; --fg: #fff; --muted: rgba(255,255,255,.65);
+      --accent: #7dd3fc;
+      --border: rgba(255,255,255,.12);
+    }
+    body { background:#000; color:#fff; }
+    .site-header { position:sticky; top:0; z-index:50; background:rgba(0,0,0,.8); backdrop-filter: blur(8px); border-bottom:1px solid var(--border); }
+    .site-header__inner { max-width:1100px; margin:0 auto; display:flex; gap:16px; align-items:center; justify-content:space-between; padding:12px 16px; }
+    .brand { display:flex; align-items:center; gap:10px; font-weight:700; letter-spacing:.2px; }
+    .brand__dot { width:10px; height:10px; border-radius:999px; background:var(--accent); display:inline-block; }
+    .nav { display:flex; gap:14px; align-items:center; }
+    .nav a { color:var(--muted); text-decoration:none; font-size:.95rem; }
+    .nav a:hover { color:#fff; }
+    .btn { display:inline-block; background:#000; border:1px solid var(--border); color:#fff; border-radius:12px; padding:8px 14px; text-decoration:none; cursor:pointer; transition:all .15s; }
+    .btn:hover { border-color:#555; }
+    .btn--primary { border-color: var(--accent); }
+    .hero .card h1 { margin-bottom:.25rem; }
+    .hero .card .sub { color:var(--muted); }
+    .feature-list { margin:.4rem 0 0 1.2rem; }
+    .feature-list li { color: var(--muted); font-size:.95rem; margin:.25rem 0; }
+    .site-footer { border-top:1px solid var(--border); margin-top:24px; }
+    .site-footer__inner { max-width:1100px; margin:0 auto; padding:16px; display:flex; gap:12px; justify-content:space-between; align-items:center; flex-wrap:wrap; color:var(--muted); }
+    .site-footer__links { display:flex; gap:14px; flex-wrap:wrap; }
+    .site-footer__links a { color: var(--muted); text-decoration:none; }
+    .site-footer__links a:hover { color:#fff; }
+    .note { color: var(--muted); font-size:.9rem; }
+  </style>
 </head>
 <body>
+  <!-- Professional site header -->
+  <header class="site-header">
+    <div class="site-header__inner">
+      <div class="brand">
+        <span class="brand__dot"></span>
+        <span>Web Desqueeze Studio</span>
+      </div>
+      <nav class="nav">
+        <a href="#settings">Settings</a>
+        <a href="#pro">Pro</a>
+        <a href="#support">Support</a>
+        <a
+          class="btn btn--primary lemonsqueezy-button"
+          href="https://anamorphicdesqueeze.lemonsqueezy.com/checkout/buy/242257"
+          data-ls-mode="embed"
+          data-ls-success="https://anamorphic-desqueeze.com/?pro=1"
+          data-ls-cancel="https://anamorphic-desqueeze.com/"
+        >Unlock Pro</a>
+      </nav>
+    </div>
+  </header>
+
   <div class="wrapper">
     <header class="hero">
       <div class="card">
-        <h1>Web Desqueeze Studio — Simple Desqueezer</h1>
-        <p class="sub">Preview horizontal de-squeeze; export fully corrected MP4/JPG/PNG</p>
+        <h1>Web Desqueeze Studio — Batch Desqueezer</h1>
+        <p class="sub">Preview horizontal de-squeeze; export fully corrected MP4/JPG/PNG — batch up to 10 files at once.</p>
       </div>
     </header>
 
     <main class="grid">
       <section class="panel monitor">
         <div class="preview" id="previewBox">
-          <video id="video" playsinline controls></video>
+          <video id="video" playsinline controls preload="metadata"></video>
           <canvas id="photoCanvas" class="hidden"></canvas>
         </div>
 
@@ -28,7 +109,7 @@
             <button id="pause" class="stop">Pause</button>
             <button id="exportSelected" class="start" disabled>Export Selected</button>
             <button id="exportBatch" class="start" disabled>Export Batch</button>
-            <span id="status" class="status">Idle</span>
+            <span id="status" class="status" role="status" aria-live="polite">Idle</span>
           </div>
 
           <progress id="progressBar" value="0" max="100" class="hidden"></progress>
@@ -41,7 +122,7 @@
         </div>
       </section>
 
-      <section class="panel">
+      <section class="panel" id="settings">
         <h2>Settings</h2>
 
         <div class="row">
@@ -105,16 +186,101 @@
           </div>
         </div>
 
-        <!-- IMPORTANT: point to your live backend -->
+        <!-- IMPORTANT: point to your live backend (unchanged; still hidden) -->
         <div class="row" style="display:none">
           <label>Upload URL</label>
-         <input id="uploadUrl" type="text" value="https://desqueeze-server-render.onrender.com/upload"/>
+          <input id="uploadUrl" type="text" value="https://desqueeze-server-render.onrender.com/upload"/>
+        </div>
+      </section>
+
+      <!-- Go Pro -->
+      <section class="panel" id="pro">
+        <h2>Go Pro</h2>
+        <div class="row">
+          <label>Unlock Pro</label>
+          <div>
+            <a
+              class="btn btn--primary lemonsqueezy-button"
+              href="https://anamorphicdesqueeze.lemonsqueezy.com/checkout/buy/242257"
+              data-ls-mode="embed"
+              data-ls-success="https://anamorphic-desqueeze.com/?pro=1"
+              data-ls-cancel="https://anamorphic-desqueeze.com/"
+            >
+              Unlock Pro — $49 Lifetime
+            </a>
+            <ul class="feature-list">
+              <li>2.0× de-squeeze is free for everyone</li>
+              <li>Other ratios & advanced controls unlock with Pro</li>
+              <li>Batch up to 10 videos/photos at once</li>
+              <li>Faster exports & premium updates</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <!-- Support -->
+      <section class="panel" id="support">
+        <h2>Support</h2>
+        <div class="row">
+          <label>Feedback</label>
+          <div>
+            <form id="feedbackForm" class="feedback-box" onsubmit="return false;">
+              <textarea id="feedbackMessage" class="feedback-input" rows="4" placeholder="Tell us what's confusing, what's broken, or what you'd love to see…"></textarea>
+              <div class="feedback-actions">
+                <input id="feedbackEmail" class="feedback-email" type="email" placeholder="Your email (optional)" />
+                <button id="sendFeedback" class="btn" type="button">Send Feedback</button>
+              </div>
+              <small id="feedbackHint" class="note">We’ll open the feedback page with your message pre-filled.</small>
+            </form>
+          </div>
         </div>
       </section>
     </main>
   </div>
 
+  <!-- Professional footer -->
+  <footer class="site-footer">
+    <div class="site-footer__inner">
+      <div>© <span id="y"></span> Web Desqueeze Studio</div>
+      <div class="site-footer__links">
+        <a href="#pro">Go Pro</a>
+        <a href="#support">Support</a>
+        <a href="https://anamorphic-desqueeze.com/" rel="noopener">Home</a>
+      </div>
+      <div class="note"></div>
+    </div>
+  </footer>
+
+  <!-- Lemon Squeezy embed -->
+  <script src="https://assets.lemonsqueezy.com/lemon.js" defer></script>
+
   <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
   <script src="./app.js"></script>
+
+  <!-- Feedback: opens Google Form with prefilled text + clipboard copy -->
+  <script>
+    (function(){
+      document.getElementById('y').textContent = new Date().getFullYear();
+
+      const btn = document.getElementById('sendFeedback');
+      const msgEl = document.getElementById('feedbackMessage');
+      const emailEl = document.getElementById('feedbackEmail');
+      const hint = document.getElementById('feedbackHint');
+      if (!btn) return;
+      btn.addEventListener('click', function(){
+        const msg = (msgEl.value || '').trim();
+        if (!msg) { hint.textContent = 'Please enter your message before sending.'; return; }
+        const email = (emailEl.value || '').trim();
+        const prefill = `Message: ${msg}${email ? `\n\nEmail: ${email}` : ''}`;
+        try { navigator.clipboard && navigator.clipboard.writeText(prefill).catch(function(){}); } catch(e) {}
+        const target = new URL('https://forms.gle/feedback');
+        target.searchParams.set('q', prefill);
+        window.open(target.toString(), '_blank', 'noopener');
+        hint.textContent = 'Opening feedback page in a new tab. Your message was copied to clipboard.';
+        msgEl.value = '';
+        emailEl.value = '';
+      });
+    })();
+  </script>
 </body>
 </html>
