--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <section class="panel" id="pro">
         <h2>Go Pro</h2>
         <div class="row">
-          <label>Unlock Pro</label>
+          <label>Unlock Pro, Coming Soon</label>
           <div>
             <a
               class="btn btn--primary lemonsqueezy-button"
@@ -207,7 +207,7 @@
               data-ls-success="https://anamorphic-desqueeze.com/?pro=1"
               data-ls-cancel="https://anamorphic-desqueeze.com/"
             >
-              Unlock Pro — $49 Lifetime
+              Unlock Pro — $49 Lifetime , coming soon !
             </a>
             <ul class="feature-list">
               <li>2.0× de-squeeze is free for everyone</li>
