--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <label>Files</label>
           <div>
              <input id="fileInput" type="file" accept="video/*,image/*,.mts,.avi,.mov,.mp4,.png,.jpg,.jpeg" multiple />
-            <small>Select up to 10 files. The first item previews above.</small>
+            <small>Select up to 10 files. The first item previews above.Free works with 5mb or smaller files only</small>
           </div>
         </div>
 
@@ -285,3 +285,4 @@
   </script>
 </body>
 </html>
+
