--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <!-- IMPORTANT: point to your live backend (unchanged; still hidden) -->
         <div class="row" style="display:none">
           <label>Upload URL</label>
-          <input id="uploadUrl" type="text" value="https://desqueeze-server-render.onrender.com/upload"/>
+          <input id="uploadUrl" type="text" value="https://http://192.168.1.11:3001/upload"/>
         </div>
       </section>
 
@@ -286,5 +286,6 @@
   </script>
 </body>
 </html>
+
 
 
