Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <section class="panel" id="pro">
         <h2>Go Pro</h2>
         <div class="row">
-          <label>Unlock Pro, Coming Soon</label>
+          <label>Unlock Pro</label>
           <div>
             <a
               class="btn btn--primary lemonsqueezy-button"
@@ -208,7 +208,7 @@
               data-ls-success="https://anamorphic-desqueeze.com/?pro=1"
               data-ls-cancel="https://anamorphic-desqueeze.com/"
             >
-              Unlock Pro — $49 Lifetime , coming soon !
+              Unlock Pro — $49 Lifetime
             </a>
             <ul class="feature-list">
               <li>2.0× de-squeeze is free for everyone</li>
@@ -286,6 +286,7 @@
   </script>
 </body>
 </html>
+
 
 
 
