Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <!-- IMPORTANT: point to your live backend (unchanged; still hidden) -->
         <div class="row" style="display:none">
           <label>Upload URL</label>
-          <input id="uploadUrl" type="text" value="http://192.168.1.11:3001/upload"/>
+          <input id="uploadUrl" type="text" value="https://api.anamorphic-desqueeze.com/"/>
         </div>
       </section>
 
@@ -286,6 +286,7 @@
   </script>
 </body>
 </html>
+
 
 
 
