--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Web Desqueeze Studio — Batch Desqueezer</title>
+  <title>Anamorphic Desqueeze Batch Desqueezer</title>
 
   <!-- SEO -->
-  <meta name="description" content="Web Desqueeze Studio lets you preview and export de-squeezed anamorphic video and photos — fast, with batch processing in your browser." />
+  <meta name="description" content=">Anamorphic Desqueeze you preview and export de-squeezed anamorphic video and photos — fast, with batch processing in your browser." />
   <meta name="keywords" content="anamorphic, desqueeze, de-squeeze, batch desqueezer, video editor, aspect ratio, cinema lens, 1.33x, 1.5x, 1.8x, 2.0x" />
   <link rel="canonical" href="https://anamorphic-desqueeze.com/" />
   <meta name="robots" content="index,follow" />
@@ -67,6 +67,9 @@
   </style>
 </head>
 <body>
+  <canvas id="canvas"></canvas>      <!-- if JS expects #canvas -->
+<button id="start">Start</button>
+<button id="stop">Stop</button>
   <!-- Professional site header -->
   <header class="site-header">
     <div class="site-header__inner">
@@ -243,7 +246,7 @@
   <!-- Professional footer -->
   <footer class="site-footer">
     <div class="site-footer__inner">
-      <div>© <span id="y"></span> Web Desqueeze Studio</div>
+      <div>© <span id="y"></span> >Anamorphic Desqueeze Batch Desqueezer</div>
       <div class="site-footer__links">
         <a href="#pro">Go Pro</a>
         <a href="#support">Support</a>
@@ -286,6 +289,7 @@
   </script>
 </body>
 </html>
+
 
 
 
