--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
   <script src="https://assets.lemonsqueezy.com/lemon.js" defer></script>
 
   <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
-  <script src="./app.js"></script>
+ <script src="./app.js?v=2"></script>
 
   <!-- Feedback: opens Google Form with prefilled text + clipboard copy -->
   <script>
