Add SEO landing page for anamorphic lens searches

--- a/index.html
+++ b/index.html
@@ -381,6 +381,6 @@
   </script>
 
   <!-- Your app JS; bump ?v= when you update app.js -->
-  <script src="./app.js?v=3"></script>
+  <script src="./app.js"></script>
 </body>
 </html>
